<resources>
    <string name="app_name">My Bus</string>
    <string name="my_bus">MY BUS</string>
    <string name="todo">TODO</string>
    <string name="online_bus_ticketing_and_location_tracking_app">Online Bus Ticketing And Location Tracking App</string>
    <string name="go">GO</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_detail" />
    <string name="provide_your_email_to_reset_your_password">Provide your email to reset your password</string>
    <string name="enter_email">Enter email</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="GetLocation">Get Location</string>
    <string name="LocationDisplay">Location Displayed Here</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="travelling">Travelling</string>
    <string name="start_a_new_journey">Start a new journey</string>
    <string name="textview">TextView</string>
    <string name="location_displayed_here">Location Displayed Here...</string>
</resources>